--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/uuid": "^10.0.0",
     "chalk": "^5.4.1",
     "dotenv": "^16.4.7",
     "react": "^18.2.0",
@@ -50,6 +51,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "styled-components": "^6.0.8",
+    "uuid": "^11.1.0",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
